2010-02-19  Alexander Pavlov  <apavlov@chromium.org>

Reviewed by Pavel Feldman.

        WebInspector: Elements panel: Correctly show empty elements' ending tags
        for XML and HTML documents.
        https://bugs.webkit.org/show_bug.cgi?id=26315

        * inspector/console-dirxml-expected.txt:
        * inspector/console-format-collections-expected.txt:
        * inspector/console-format-expected.txt:
        * inspector/elements-panel-limited-children-expected.txt:
        * inspector/elements-panel-structure-expected.txt:
        Re-baselined due to closing tags and ellipses between opening and closing tags

        * inspector/elements-panel-xhtml-structure-expected.txt: Added.
        * inspector/elements-panel-xhtml-structure.xhtml: Added.
2010-02-19  Alexander Pavlov  <apavlov@chromium.org>

        Reviewed by Pavel Feldman.

        WebInspector: Elements panel: Correctly show empty elements' ending tags
        for XML and HTML documents.
        https://bugs.webkit.org/show_bug.cgi?id=26315

        Test: inspector/elements-panel-xhtml-structure.xhtml

        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::populateScriptObjects):
        * inspector/front-end/ElementsTreeOutline.js:
        (WebInspector.ElementsTreeOutline.prototype.set rootDOMNode):
        (WebInspector.ElementsTreeOutline.prototype.get isXMLMimeType):
        (WebInspector.ElementsTreeOutline.prototype._contextMenuEventFired):
        (WebInspector.ElementsTreeElement.prototype.onexpand):
        (WebInspector.ElementsTreeElement.prototype.oncollapse):
        (WebInspector.ElementsTreeElement.prototype.updateTitle.callback):
        (WebInspector.ElementsTreeElement.prototype.updateTitle):
        (WebInspector.ElementsTreeElement.prototype._nodeTitleInfo):

Canonical link: https://commits.webkit.org/46321@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55016 268f45cc-cd09-0410-ab3c-d52691b4dbfc